Fixed box shadow issue on mobile, fixed nav bar scroll distance

--- a/styles.css
+++ b/styles.css
@@ -20,6 +20,14 @@ body{
 /*img {height:280px; width: auto;
 }*/
 
+.main { grid-area: main;
+margin: 10px 10px 10px 10px;
+border: 3px;
+  display: flex;
+  flex-direction: column;
+  gap: 500px;
+}
+
 .linked_img {
   height: 40px;
   margin-top: 5px;
@@ -36,7 +44,7 @@ body{
 .header_p{
   font-size: 30px; 
   margin-bottom: 5px; 
-  margin-top: 60px;
+  margin-top: 0px;
   transition: 0.4s;
 
 }
@@ -48,20 +56,18 @@ header {font-size: 250%;
         margin-left: 10px;
         margin-right: 10px;
         margin-bottom: 250px;
-        border-style: solid;
-        border-width: 2px;
-        border-color: black;
         background-color: #bafca2;
         position: sticky;
         top: 0;
         grid-area: header;
         display: flex;
         flex-direction: column;
-        box-shadow:0;
         transition: 0.4s; 
+        border: 3px solid #000000;
+
 
 }
-/* Top row inside header: name/info on left, photo on right */
+/* Top row inside header with info on left and photo on right */
 .header-top {
   display: flex;
   align-items: center;
@@ -98,19 +104,17 @@ border-width: 2px;
 border-color: black;
  }
 
-.main { grid-area: main;
-margin: 10px 10px 10px 10px;
-border: 3px;
-}
+
 
 .content{
-    padding: 10px 10px 10px 10px;
-    margin:  10px 10px 500px 10px;
+    padding: 10px;
+    margin: 0px;
   background-color: #c4a1ff;
   border: 3px solid #000000;
   border-radius: 6px;
-  box-shadow: 4px 4px 0px 0px #000000;
-  transition: all 0.15s ease-in-out;
+  box-shadow: 4px 4px 0.01px #000;
+
+  
 }
 
 
@@ -160,6 +164,20 @@ ul li:hover {
 
 
 @media (min-width: 992px) {
+
+  header {
+      border: 3px solid #000000;
+      border-radius: 6px;
+      box-shadow: 4px 4px 0px 0px #000000;
+  }
+
+
+  .content {
+      border: 3px solid #000000;
+  border-radius: 6px;
+  box-shadow: 4px 4px 0px 0px #000000;
+  transition: all 0.15s ease-in-out;
+  }
   .content:hover {
   transform: translate(4px, 4px);
   box-shadow: 0px 0px 0px 0px #000000;
